Second test case has been added