@@ -229,12 +229,34 @@
         <pathelement location="../../../../../../../Eclipse/commons-codec-1.9.jar"/>
         <pathelement location="../../../../../../../Eclipse/mysql-connector-java-5.1.46-bin.jar"/>
     </path>
+    <path id="run.SpeedyFilaMain.classpath">
+        <path refid="SpeedyFila.classpath"/>
+        <path refid="Apache Tomcat v9.0 [Apache Tomcat v9.0].libraryclasspath"/>
+        <path refid="Web App Libraries.libraryclasspath"/>
+        <path refid="EAR Libraries.libraryclasspath"/>
+        <path refid="JavaFX.userclasspath"/>
+        <path refid="JUnit 5.libraryclasspath"/>
+        <path refid="Google.userclasspath"/>
+        <pathelement location="../../../../../../../Eclipse/json-20190722.jar"/>
+        <pathelement location="../../../../../../../Eclipse/commons-codec-1.9.jar"/>
+        <pathelement location="../../../../../../../Eclipse/mysql-connector-java-5.1.46-bin.jar"/>
+    </path>
+    <path id="run.TestAddReportControl.classpath">
+        <path refid="SpeedyFila.classpath"/>
+        <path refid="Apache Tomcat v9.0 [Apache Tomcat v9.0].libraryclasspath"/>
+        <path refid="Web App Libraries.libraryclasspath"/>
+        <path refid="EAR Libraries.libraryclasspath"/>
+        <path refid="JavaFX.userclasspath"/>
+        <path refid="JUnit 5.libraryclasspath"/>
+        <path refid="Google.userclasspath"/>
+        <pathelement location="../../../../../../../Eclipse/json-20190722.jar"/>
+        <pathelement location="../../../../../../../Eclipse/commons-codec-1.9.jar"/>
+        <pathelement location="../../../../../../../Eclipse/mysql-connector-java-5.1.46-bin.jar"/>
+    </path>
     <target name="init">
         <mkdir dir="build/classes"/>
         <copy includeemptydirs="false" todir="build/classes">
             <fileset dir="src">
-                <exclude name="**/*.launch"/>
-                <exclude name="**/*.xtend"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
@@ -292,9 +314,25 @@
         <mkdir dir="${junit.output.dir}"/>
         <junit fork="yes" printsummary="withOutAndErr">
             <formatter type="xml"/>
+            <test name="test.TestAddReportControl" todir="${junit.output.dir}"/>
             <test name="test.TestVerifyConditionReportControl" todir="${junit.output.dir}"/>
             <jvmarg line="-ea"/>
             <classpath refid="run.SpeedyFila (1).classpath"/>
+        </junit>
+    </target>
+    <target name="SpeedyFilaMain">
+        <java classname="logic.main.Main" failonerror="true" fork="yes">
+            <jvmarg line="--module-path &quot;C:\Eclipse\javafx-sdk-15.0.1\lib&quot; --add-modules javafx.controls,javafx.fxml&#13;&#10;--add-modules=javafx.swing,javafx.graphics,javafx.fxml,javafx.media,javafx.web &#13;&#10;--add-reads javafx.graphics=ALL-UNNAMED &#13;&#10;--add-opens javafx.controls/com.sun.javafx.charts=ALL-UNNAMED &#13;&#10;--add-opens javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED &#13;&#10;--add-opens javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED &#13;&#10;--add-opens javafx.graphics/com.sun.javafx.css=ALL-UNNAMED &#13;&#10;--add-opens javafx.base/com.sun.javafx.runtime=ALL-UNNAMED"/>
+            <classpath refid="run.SpeedyFilaMain.classpath"/>
+        </java>
+    </target>
+    <target name="TestAddReportControl">
+        <mkdir dir="${junit.output.dir}"/>
+        <junit fork="yes" printsummary="withOutAndErr">
+            <formatter type="xml"/>
+            <test name="test.TestAddReportControl" todir="${junit.output.dir}"/>
+            <jvmarg line="-ea"/>
+            <classpath refid="run.TestAddReportControl.classpath"/>
         </junit>
     </target>
     <target name="junitreport">
